# rust-opengl

./: Cargo.toml
src/: lib.rs  main.rs
src/shaders/: fragment_shader.rs  vertex_shader.rs
src/types/: types.rs
src/wrappers/: buffer.rs  shader.rs
