[package]
name = "rust-opengl"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1"
ultraviolet = "0.7"

# these should be dev dependencies, but i use the bin directory
# during dev so they live here, except during a crates.io release
beryllium = "0.13.3"
imagine = "0.0.5"
gl33 = "0.2.1"

[dev-dependencies]
